--- a/users/static/users/css/journal.css
+++ b/users/static/users/css/journal.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
-/* General Page Styling */
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
+
 .journal-container {
-    max-width: 900px; /* Increase the width */
-    margin: 20px auto; /* Center it */
+    max-width: 900px; 
+    margin: 20px auto;
     background: white;
     padding: 30px;
     border-radius: 12px;
