--- a/users/static/users/css/dashboard.css
+++ b/users/static/users/css/dashboard.css
@@ -180,14 +180,14 @@ body {
 
 /* Alternate colors for adjacent cards */
 .module-card:nth-child(odd) {
-    background: #73C4FD;
-    border-left: 5px solid #5ca5ea;
+    background: #f2f20557;
+    border-left: 5px solid #f2f20557;
 }
 
 .module-card:nth-child(even) {
-    background: #0048FF;
-    border-left: 5px solid #012EAB; 
-    color: #eeebeb;
+    background: #f2f20557;
+    border-left: 5px solid #f2f20557; 
+    color: #333;
 }
 
 .module-card:nth-child(odd) h3 {
@@ -195,7 +195,7 @@ body {
 }
 
 .module-card:nth-child(even) h3 {
-    color: #eeebeb;
+  color: #333;
 }
 
 .module-card:nth-child(odd) p {
@@ -384,7 +384,7 @@ body {
   transition: color 0.2s ease-in-out;
 }
 .recent-module-item a:hover {
-  color: #007bff;
+  color: #cccccc69;
 }
 .no-modules {
   font-size: 0.85rem;
@@ -444,7 +444,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px; /* Space between the description and button */
+  gap: 10px;
 }
 
 .start-questionnaire-button {
