--- a/users/static/users/css/personalized_plan.css
+++ b/users/static/users/css/personalized_plan.css
@@ -108,7 +108,7 @@ body {
 .module-card {
     width: 220px;
     height: 300px;
-    background: #80c3f7;
+    background: #f2f20557;
     margin: 0 auto;
     text-align: center;
 }
