--- a/users/static/users/css/sticky_note.css
+++ b/users/static/users/css/sticky_note.css
@@ -4,7 +4,7 @@
   width: 100%;
   max-width: 100%;
   min-height: 180px;
-  background-color: rgba(115, 196, 253, 0.69);
+  background-color: #f2f20557;
   padding: 15px;
   border-radius: 8px;
   box-shadow: 3px 3px 5px rgba(0,0,0,0.2);
@@ -55,7 +55,7 @@
 }
 
 .right-column .bullet-btn:hover {
-  background: rgba(85, 176, 233, 0.9);
+  background: #f2f2059c;
   transform: scale(1.1);
 }
 
