--- a/users/static/users/css/userModules.css
+++ b/users/static/users/css/userModules.css
@@ -58,7 +58,7 @@ body {
 .search-bar:focus {
     width: 350px;
     outline: none;
-    border-color: #4da6ff;
+    border-color: #f2f20557;
 }
 
 /* Module list container */
@@ -94,14 +94,13 @@ body {
 
 /* 3D Effect */
 .module-card:nth-child(odd) {
-    background: #73C4FD;
-    border-left: 5px solid #5ca5ea;
+    background: #f2f20557;
+    border-left: 5px solid #f2f20557;
 }
 
 .module-card:nth-child(even) {
-    background: #0148FD;
-    border-left: 5px solid #012EAB;
-    color: #eeebeb;
+    background: #f2f20557;
+    border-left: 5px solid #f2f20557;
 }
 
 .module-card h3 {
@@ -121,8 +120,6 @@ body {
     white-space: normal;
 }
 
-    
-/* View Module Button */
 .view-module-button {
     background: white;
     color: #F24505;
@@ -140,9 +137,6 @@ body {
     color: white;
 }
 
-
-
-/* trying new adjustment for different screen sizes */
 .progress-container {
 width: 100%;
 display: flex;
