edit reports css for new colours

--- a/client/templates/client/programs_statistics.html
+++ b/client/templates/client/programs_statistics.html
@@ -72,7 +72,7 @@
                         datasets: [{
                             label: 'Users Enrolled',
                             data: enrollmentData,
-                            backgroundColor: ['#ff4500', '#0044ff', '#cfe2f3', "#FD5402", "#4076FF"],
+                            backgroundColor: ['#ff4500', '#f2f20557', '#35b008bf', "#FD5402", "#35b008bf"],
                             borderColor: '#fff',
                             borderWidth: 1
                         }]
@@ -112,7 +112,7 @@
                         {
                             label: 'Completed',
                             data: completedData,
-                            backgroundColor: '#4076FF',
+                            backgroundColor: '#f2f20557',
                         },
                         {
                             label: 'In Progress',
@@ -147,8 +147,8 @@
                     datasets: [{
                         label: 'Average Completion (%)',
                         data: completionTimeData,
-                        borderColor: "#FF4500",
-                        backgroundColor: "rgba(255, 69, 0, 0.2)",
+                        borderColor: "#ff4500",
+                        backgroundColor: "#f2f20557",
                         fill: true
                     }]
                 },
