--- a/client/templates/client/reports.html
+++ b/client/templates/client/reports.html
@@ -101,8 +101,8 @@
                     datasets: [{
                         label: 'Users per Last Working Time',
                         data: lastWorkData,  // Count of users
-                        borderColor: "#0044ff",
-                        backgroundColor: "rgba(0, 68, 255, 0.2)",
+                        borderColor: "#ff4500",
+                        backgroundColor: "#f2f20557",
                         fill: true
                     }]
                 },
@@ -148,7 +148,7 @@
                     datasets: [{
                         label: 'Users Enrolled',
                         data: enrollmentData, // Enrollment Counts
-                        backgroundColor: ['#ff4500', '#0044ff', '#cfe2f3', "#FD5402", "#4076FF"],
+                        backgroundColor: ['#ff4500', '#f2f20557',  '#35b008bf', "#FD5402", '#35b008bf'],
                         borderColor: '#fff',
                         borderWidth: 1
                     }]
@@ -202,7 +202,7 @@
                     datasets: [{
                         label: 'Users Enrolled',
                         data: programData,  // Enrollment Counts
-                        backgroundColor: "#36a2eb",
+                        backgroundColor: '#35b008bf',
                         borderColor: "#ffffff",
                         borderWidth: 1
                     }]
