--- a/client/templates/client/modules_statistics.html
+++ b/client/templates/client/modules_statistics.html
@@ -89,7 +89,7 @@
                         datasets: [{
                             label: 'Users Enrolled',
                             data: enrollmentData,
-                            backgroundColor: ['#ff4500', '#0044ff', '#cfe2f3', "#FD5402", "#4076FF"],
+                            backgroundColor: ['#ff4500', '#f2f20557', '#35b008bf', "#FD5402", "#35b008bf"],
                             borderColor: '#fff',
                             borderWidth: 1
                         }]
@@ -129,7 +129,7 @@
                             {
                                 label: 'Completed',
                                 data: completedData,
-                                backgroundColor: '#4076FF',
+                                backgroundColor: '#f2f20557',
                             },
                             {
                                 label: 'In Progress',
@@ -168,8 +168,8 @@
                     datasets: [{
                         label: 'Average Completion (%)',
                         data: completionTimeData,  // Completion percentages (including 0%)
-                        borderColor: "#FF4500",
-                        backgroundColor: "rgba(255, 69, 0, 0.2)",
+                        borderColor: "#ff4500",
+                        backgroundColor: "#f2f20557",
                         fill: true
                     }]
                 },
