--- a/client/static/client/css/program_detail.css
+++ b/client/static/client/css/program_detail.css
@@ -7,7 +7,7 @@ body {
 }
 
 .container {
-    max-width: 800px;
+    width: 100%;
     margin: auto;
     padding: 20px 40px 10px 30px;
     background: white;
@@ -70,6 +70,7 @@ h1, h2 {
     background: #D43802;
     color: white;
 }
+
 
 .btn-secondary {
     padding: 12px 18px;
