--- a/client/templates/client/add_video.html
+++ b/client/templates/client/add_video.html
@@ -2,119 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-<style>
-
-    .video-container {
-        width: 1000px;
-        height: 500px;
-        margin-left: 130px ;
-        margin-right: 130px ;
-        margin-top: 30px ;
-        margin-bottom: 100px ;
-        padding: 40px;
-        background : #ffff;
-        border-radius: 12px;
-        box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.15);
-    }
-
-    /* Styled heading */
-    .page-title {
-        font-size: 30px;
-        font-weight: bold;
-        color: #ff6b00; /* Deep Blue */
-        margin-top: 40px;
-        margin-bottom: 0 px;
-        text-transform: uppercase;
-        text-align: center;
-    }
-
-    
-    /* Form Container */
-  
-
-    .form-group {
-        margin-bottom: 15px;
-    }
-
-    .form-group label {
-        font-size: 16px;
-        font-weight: bold;
-        color: #333;
-        display: block;
-        margin-bottom: 5px;
-    }
-
-    .form-group input,
-    .form-group textarea {
-        width: 100%;
-        padding: 12px;
-        font-size: 15px;
-        border: 2px solid #ddd;
-        border-radius: 6px;
-        transition: all 0.3s ease-in-out;
-    }
-
-    .form-group input:focus,
-    .form-group textarea:focus {
-        border-color: #ff6b00;
-        outline: none;
-        box-shadow: 0px 0px 6px rgba(255, 107, 0, 0.3);
-    }
-
-    /* Video Preview */
-    .video-preview {
-        text-align: center;
-        margin-bottom: 20px;
-    }
-
-    .video-preview iframe {
-        width: 100%;
-        max-width: 720px;
-        height: 405px;
-        border-radius: 10px;
-        border: 4px solid #ff6b00;
-    }
-
-    /* Upload Button */
-    .upload-btn {
-        width: 100%;
-        padding: 14px;
-        font-size: 16px;
-        font-weight: bold;
-        text-align: center;
-        text-decoration: none;
-        color: #fff;
-        background:  #ff6b00;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-    }
-
-    .upload-btn:hover {
-        background:  #ff6b00;
-        transform: scale(1.05);
-    }
-
-    /* Back Button */
-    .back-btn {
-        display: inline-block;
-        position: relative;
-        left: -20px;
-        margin-top: 170px;
-        padding: 12px 24px;
-        font-size: 16px;
-        font-weight: bold;
-        text-decoration: none;
-        color: #fff;
-        background:  #ff6b00;
-        border-radius: 8px;
-    }
-
-    .back-btn:hover {
-        background:  #ff6b00;
-        transform: scale(1.05);
-    }
-</style>
+<link rel="stylesheet" href="{% static 'client/css/add_video.css' %}">
 {% endblock %}
 
 {% block content %}
