--- a/users/static/users/css/moduleOverview.css
+++ b/users/static/users/css/moduleOverview.css
@@ -135,6 +135,10 @@ canvas#progressChart {
         padding: 15px!important;  
         margin-left: 30px!important; 
     }
+    .collapsible-content iframe {
+        width: 100%;  /* Ensure iframe is fully responsive */
+        height: 315px;  /* Set a specific height for better control */
+    }
 
     .header-left {
         font-size: 10px!important; 
