--- a/users/static/users/css/dashboard.css
+++ b/users/static/users/css/dashboard.css
@@ -88,6 +88,7 @@ body {
 .module-card:nth-child(odd) {
     background: #f2f20557;
     border-left: 5px solid #f2f20557;
+    color: #333;
 }
 
 .module-card:nth-child(even) {
@@ -109,7 +110,7 @@ body {
 }
 
 .module-card:nth-child(even) p {
-    color: #eeebeb;
+    color: #333;;
 }
 
 /* Ensure title stays inside the card */
@@ -295,7 +296,7 @@ body {
   transition: color 0.2s ease-in-out;
 }
 .recent-module-item a:hover {
-  color: #cccccc69;
+  color: #a6a4a4;
 }
 .no-modules {
   font-size: 0.85rem;
