--- a/client/static/client/css/category_list.css
+++ b/client/static/client/css/category_list.css
@@ -10,7 +10,7 @@
 
 .content {
     padding: 40px;
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
