--- a/client/static/client/css/reports.css
+++ b/client/static/client/css/reports.css
@@ -125,7 +125,7 @@ canvas {
   padding-top: 20px;
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
     .content {
         padding: 15px;
         margin-left: 30px; 
